# ctypes_dll

./: .gitignore  CMakeLists.txt  README.md  ctypes_dll.c  ctypes_dll.sln
ctypes_dll/: ctypes_dll.vcxproj  ctypes_dll.vcxproj.filters
include/: ctypes_dll.h
